# railcord

./: .clang-format  CMakeLists.txt  lucy.ini  vcpkg.json
src/: alert_info.cpp  alert_info.h  alert_manager.cpp  alert_manager.h  cmdline_helper.cpp  cmdline_helper.h  gamedata.cpp  gamedata.h  license.cpp  license.h  logger.cpp  logger.h  lucy.cpp  lucy.h  lucyapi.h  main.cpp  message_tracker.cpp  message_tracker.h  personality.cpp  personality.h  personality_watcher.cpp  personality_watcher.h  sent_messages.cpp  sent_messages.h  util.cpp  util.h
src/cmd/: alert_on.cpp  command_handler.cpp  command_handler.h  commands.h  license_bid.cpp  ping.cpp  remove_custom_message.cpp  save_settings.cpp  set_channel.cpp  shutdown.cpp  stop_watch.cpp  watch.cpp
webbot/: faslkapi.py  requirements.txt  webbot.py
